correct spacing for mobile header__logo section

--- a/css/styles.css
+++ b/css/styles.css
@@ -733,10 +733,14 @@ post-types__item .fab {
     width: 100%;
   }
   .header__logo-section .header__logo-search input {
-    width: 100%;
-    overflow: hidden;
-    margin-right: 5px;
+    width: 95%;
   }
+
+  .header__logo-section .header__mobile-button {
+    margin-left: 5px;
+  }
+
+
   
 
 }
